--- a/blogpost.html
+++ b/blogpost.html
@@ -4,7 +4,14 @@
         <link rel="stylesheet" href="css/estilos.css" />
     </head>
     <body>
-        <h1>Aquí vamos a hacer un blog post</h1>
-        <p>Y este es el parrafo de inicio</p>
+        <div id="container">
+            <div id="cabecera">
+                Hyperblog
+                <span id="tagline">Tu blog de cabecera</span>
+            </div>
+        </div="post">
+            <h1>Este es el Título atractivo e intersante del post</h1>
+            <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increibles que se pueden hacer con ramas</p>
+            <p>Los blogs son la meforma forma de compartir informacion y tus ideas.Mucho mas que ir a conferencias o salir en Youtube. </p>
     </body>
 </html>
